Fixed coverflow & name, mobile support going well 🙏

--- a/src/styles/_moveImage.module.scss
+++ b/src/styles/_moveImage.module.scss
@@ -2,8 +2,6 @@
   position: relative;
   justify-self: center;
   z-index: 100;
-  width: 100%;
-  height: 100%;
 
   --default-rotate: 11deg;
 }
@@ -11,6 +9,8 @@
 .container .image {
   --rotateX: 5deg;
   --rotateY: 0deg;
+  width: 5rem;
+  height: 5rem;
 
   transition: transform 500ms ease;
   transform: perspective(31.25rem) rotateY(var(--rotateY))
@@ -19,7 +19,7 @@
 
 .container .pos {
   position: absolute;
-  z-index: 1;
+  z-index: 100;
   display: inline-block;
   width: calc(100% / 3);
   height: calc(100% / 2);
@@ -86,8 +86,8 @@
 }
 
 @media (min-width: 48rem) {
-  .container {
-    width: 12rem;
-    height: 12rem;
+  .container .image {
+    width: 8rem;
+    height: 8rem;
   }
 }
