--- a/src/styles/_songs.module.scss
+++ b/src/styles/_songs.module.scss
@@ -1,105 +1,42 @@
 img {
   display: block;
-  width: 100%;
-  height: auto;
   object-fit: cover;
+  width: 5rem;
+  height: 5rem;
+  filter: drop-shadow(3px 3px 5px #000);
 }
 
 .container {
-  width: 100%;
-  height: auto;
   position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.header {
-  text-align: center;
-
-  h1 {
-    font-size: var(--text-4xl);
-  }
-}
-
-.selectorContainer {
-  position: relative;
-  display: flex;
-
-  gap: 1rem;
-  padding: 0.75rem;
-  border: 1px solid var(--white-but-not);
-  border-radius: 5rem;
-  box-shadow: 2px 2px 10px #000;
-  width: fit-content;
-  margin: 0 auto;
-}
-
-.selector {
-  width: 5.5rem;
-  padding: 0.75rem 0;
-  font-size: var(--text-xs);
-  text-align: center;
-  border: 1px solid var(--white-but-not);
-  border-radius: 5rem;
-  cursor: pointer;
-  margin-block: 0;
-}
-
-.selectorIndicator {
-  position: absolute;
-  top: 1rem;
-  bottom: 1rem;
-  left: 1rem;
-  width: 5rem;
-  background-color: var(--color-yellow);
-  border-radius: 5rem;
-  opacity: 0.5;
-  transform: translateX(calc(6.5rem * var(--offset)));
-  transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 350ms;
-  cursor: pointer;
-}
-
-.membersContainer {
-  position: relative;
-  width: auto;
-  height: auto;
-}
-
-.membersBackground {
-  position: absolute;
-  inset: 0;
-  z-index: 0;
-}
-
-.memberContainer {
-  position: absolute;
-  inset: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100%;
   perspective: 31.25rem;
   transform-style: preserve-3d;
-  pointer-events: none;
-  z-index: 1;
+  inset: 0;
 }
 
-#imageContainer {
-  --offsetX: calc(var(--offset) * 5rem);
+// center leftImage and rightImage when activeImage is on
+.imageContainer {
+  --offsetX: calc(var(--offset) * 2rem);
   --rotateY: 25deg;
+  --translateZ: 5rem;
   --opacity: 0.65;
+
   position: absolute;
   top: 4rem;
-  width: 8rem;
-  aspect-ratio: 1 / 1;
-  transition: top 400ms ease, 400ms ease, scale 750ms ease, opacity 350ms ease;
-  filter: drop-shadow(3px 3px 5px #333);
-  pointer-events: auto;
-  z-index: calc(100 - abs(var(--offset)));
+  transition:
+    transform 400ms ease,
+    scale 750ms ease,
+    opacity 350ms ease;
 
   &.default {
+    z-index: calc(100 - var(--offset));
     opacity: var(--opacity);
     cursor: pointer;
-    transform: translateX(calc(var(--offsetX) + 1rem))
-      rotateY(calc(var(--rotateY) * -0.5));
+    transform: translateX(var(--offsetX)) rotateY(calc(var(--rotateY) * -0.5))
+      translateZ(calc(var(--translateZ) * -1));
   }
 
   &.activeImage {
@@ -109,25 +46,27 @@ img {
   }
 
   &.rightImage {
-    transform-origin: left center;
-    opacity: calc(1 - calc(abs(var(--offset)) * 0.1));
+    z-index: calc(100 - var(--offset));
+    opacity: calc(1 - calc(var(--offset) * 0.1));
     cursor: pointer;
-    transform: translateX(var(--offsetX)) rotateY(calc(var(--rotateY) * -1));
+    transform: translateX(var(--offsetX)) rotateY(calc(var(--rotateY) * -1))
+      translateZ(calc(var(--translateZ) * -1));
   }
 
   &.leftImage {
-    transform-origin: right center;
-    opacity: calc(1 - calc(abs(var(--offset)) * 0.1));
+    z-index: calc(100 + var(--offset));
+    opacity: calc(1 + calc(var(--offset) * 0.1));
     cursor: pointer;
-    transform: translateX(var(--offsetX)) rotateY(calc(var(--rotateY) * 1));
+    transform: translateX(var(--offsetX)) rotateY(calc(var(--rotateY) * 1))
+      translateZ(calc(var(--translateZ) * -1));
   }
 }
 
-.hoverContainer {
-  position: relative;
-}
-
 #textContainer {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   width: 12rem;
@@ -158,35 +97,17 @@ img {
   }
 }
 
-@media (width >= 48rem) {
-  .container {
-    gap: 2rem;
+@media (min-width: 48rem) {
+  img {
+    width: 8rem;
+    height: 8rem;
   }
-
-  .selectorIndicator {
-    width: 7rem;
-    transform: translateX(calc(8.5rem * var(--offset)));
-  }
-
-  .selector {
-    width: 7.5rem;
-    padding: 0.75rem 0.25rem;
-    font-size: var(--text-md);
-  }
-
-  #imageContainer {
-    --offsetX: calc(var(--offset) * 7rem);
-    --rotateY: 40deg;
-    width: 12rem;
-    height: 12rem;
-
-    &.default {
-      top: 25%;
-      scale: 1.25;
-    }
-  }
-
-  .textContainer {
-    width: 15rem;
+  .imageContainer {
+    --offsetX: calc(var(--offset) * 5rem);
+    
+    transition:
+      transform 400ms ease,
+      scale 500ms ease,
+      opacity 350ms ease;
   }
 }
